<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up"
        android:textColor="#120E21"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:hint="@string/first_name"
        android:textColor="#99879D"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/signUpText"

        />

    <TextView
        android:id="@+id/errorTextFirstNameSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/errorTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/emailSignUp"
        app:layout_constraintTop_toBottomOf="@id/emailSignUp" />

    <TextView
        android:id="@+id/errorTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/lastName"
        app:layout_constraintTop_toBottomOf="@id/lastName" />

    <TextView
        android:id="@+id/errorPasswordSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/passwordSignUp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/last_name"
        android:textColor="#99879D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"

        />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:textColor="#99879D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName"

        />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textColor="#99879D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailSignUp"

        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/bg_button"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUp" />

    <TextView
        android:id="@+id/textLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/you_have_an_account_log_in"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="@dimen/dimen_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>