<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="120dp"
        android:text="@string/log_in"
        android:textColor="#120E21"
        android:textSize="@dimen/dimens_28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailLogIn"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:textColor="#99879D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInText" />

    <TextView
        android:id="@+id/errorTextEmailLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/emailLogIn"
        app:layout_constraintTop_toBottomOf="@id/emailLogIn" />

    <TextView
        android:id="@+id/errorTextPasswordLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/passwordLogIn"
        app:layout_constraintTop_toBottomOf="@id/passwordLogIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/emailLogIn"
        app:layout_constraintTop_toBottomOf="@+id/emailLogIn"

        />

    <EditText
        android:id="@+id/passwordLogIn"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogIn" />


    <Button
        android:id="@+id/signUpButtonLogIn"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/bg_button"
        android:enabled="false"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/returnToSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="50dp"
        android:text="@string/return_to_sing_up"
        android:textColor="@color/text_black"
        android:textSize="@dimen/dimen_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButtonLogIn" />


</androidx.constraintlayout.widget.ConstraintLayout>